# pygments-minimessage

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: check-format.yaml  docs.yaml  publish-docs.yaml  publish.yaml
docs/: Makefile  conf.py  examples.rst  index.rst  make.bat  version-history.rst
src/pygments_minimessage/: __init__.py
